# rusty-gql

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  directory_structure.html  error_handling.html  getting_started.html  index.html  introduction.html  print.html  roadmap.html  searchindex.js  searchindex.json
.github/workflows/: book.yml  ci.yml  release.yml
cli/: .gitignore  Cargo.toml
cli/schemas/: extend.graphql  github.graphql
cli/src/: app.rs  exit_codes.rs  main.rs  mock.rs
cli/src/code_generate/: cargo_toml_file.rs  directive.rs  example_schema_file.rs  graphql_mod_file.rs  main_file.rs  mod.rs  mod_file.rs  operation.rs  root_mod_file.rs  type_definition.rs  util.rs  utils.rs
cli/src/code_generate/directive/: mod.rs
cli/src/code_generate/operation/: field_file.rs  mod.rs  operation_mod_file.rs
cli/src/code_generate/project/: cargo_toml_file.rs  example_schema_file.rs  gitignore_file.rs  main_file.rs  mod.rs
cli/src/code_generate/project/axum/: cargo_toml_file.rs  main_file.rs  mod.rs
cli/src/code_generate/type_definition/: enum_file.rs  input_file.rs  interface_file.rs  mod.rs  object_file.rs  scalar_file.rs  union_file.rs
cli/src/graphql/: mod.rs  operation.rs  type_definition.rs  utils.rs
cli/src/integration/: axum_gql.rs  mod.rs  rocket_gql.rs
cli/tests/schemas/: pet_schema.graphql
codegen/: Cargo.toml
codegen/src/: data.rs  error.rs  gql_struct.rs  lib.rs  model.rs  object.rs  query.rs  resolver.rs  types.rs  utils.rs
codegen/tests/: tests.rs
derive/: Cargo.toml
derive/src/: lib.rs  types.rs
derive/tests/: tests.rs
docs/: book.toml
docs/src/: SUMMARY.md  directory_structure.md  error_handling.md  getting_started.md  introduction.md  roadmap.md
docs/src/schema/: index.md  mutation.md  query.md
docs/src/types/: directive.md  enum.md  index.md  input_object.md  interface.md  object.md  scalar.md  union.md
examples/actix-web/: Cargo.toml
examples/axum/: Cargo.toml
examples/axum/schemas/: schema.graphql  starwars.graphql
examples/axum/src/: main.rs  starwars.rs
examples/axum/src/graphql/: mod.rs
examples/axum/src/graphql/directive/: mod.rs  possible_types.rs
examples/axum/src/graphql/input/: mod.rs  review_input.rs
examples/axum/src/graphql/model/: Character.rs  Droid.rs  Episode.rs  FriendsConnection.rs  FriendsEdge.rs  Human.rs  Review.rs  friends_connection.rs  friends_edge.rs  length_unit.rs  mod.rs  page_info.rs  search_result.rs
examples/axum/src/graphql/mutation/: createReview.rs  create_review.rs  mod.rs
examples/axum/src/graphql/query/: character.rs  droid.rs  hero.rs  human.rs  mod.rs  reviews.rs  search.rs
examples/axum/src/graphql/resolver/: droid.rs  friends_connection.rs  human.rs  review.rs
examples/axum/src/graphql/scalar/: date_time.rs  mod.rs
examples/axum/src/graphql/subscription/: mod.rs
examples/rocket/: Cargo.toml
examples/rocket/src/: main.rs
frameworks/actix_web/: Cargo.toml
frameworks/actix_web/src/: lib.rs  request.rs  response.rs
frameworks/axum/: Cargo.toml
frameworks/axum/src/: lib.rs  request.rs  response.rs
frameworks/rocket/: Cargo.toml
frameworks/rocket/src/: lib.rs  request.rs  response.rs
macro/: Cargo.toml
macro/src/: enum_type.rs  input_object.rs  interface.rs  lib.rs  resolver.rs  scalar.rs  ty.rs  union.rs  utils.rs
schema/: index.html  mutation.html  query.html
src/: container.rs  context.rs  custom_directive.rs  custom_scalar.rs  error.rs  executor.rs  field_resolver.rs  graphiql_html.rs  graphql_object.rs  graphql_value.rs  lib.rs  object_resolver.rs  operation.rs  path.rs  playground_html.rs  query_root.rs  request.rs  resolver.rs  response.rs  test_async.rs  test_container.rs  test_resolver.rs  test_utils.rs  variables.rs
src/input/: boolean.rs  id.rs  list.rs  mod.rs  number.rs  object.rs  optional.rs  string.rs
src/middlewares/: mod.rs
src/parser/: kind.rs  mod.rs  query.rs  schema.rs
src/resolver/: boolean.rs  id.rs  list.rs  mod.rs  number.rs  object.rs  optional.rs  string.rs
src/template/: mod.rs
src/test_resolvers/: mod.rs
src/test_resolvers/model/: author.rs  mod.rs  post.rs
src/test_resolvers/query/: mod.rs
src/tests/: dummy_data.graphql  github.graphql  github_query.graphql  github_schema_operation.graphql  github_schema_query.graphql  multiple_operation.graphql  pet_query.graphql  pet_schema.graphql
src/types/: argument.rs  directive.rs  enum.rs  enum_type.rs  error.rs  field.rs  fragment.rs  gql_enum.rs  gql_type.rs  gql_union.rs  id.rs  input.rs  input_object.rs  interface.rs  meta_type.rs  mod.rs  mutation.rs  object.rs  object_type.rs  operation.rs  query.rs  scalar.rs  schema.rs  subscription.rs  type_definition.rs  type_extension.rs  union_type.rs  value.rs  value_type.rs
src/types/introspection/: __directive.rs  __enum_value.rs  __field.rs  __input_value.rs  __schema.rs  __type.rs  directive.rs  enum_value.rs  field.rs  input_value.rs  introspection_sdl.rs  introspection_type.rs  mod.rs  schema.rs
src/types/value/: mod.rs  serializer.rs
src/validation/: mod.rs  scope.rs  test_utils.rs  utils.rs  visitor.rs
src/validation/rules/: arguments_of_correct_type.rs  default_values_of_correct_type.rs  fields_on_correct_type.rs  fragments_on_composite_types.rs  known_argument_names.rs  known_directives.rs  known_fragment_names.rs  known_type_names.rs  lone_anonymous_operation.rs  mod.rs  no_fragment_cycles.rs  scalar_leafs.rs  (+10 more)
tests/: custom_directive.rs  custom_scalar.rs  data.rs  enum.rs  fragment.rs  gql_struct.rs  input_object.rs  interface.rs  introspection.rs  model.rs  mutation.rs  object.rs  query.rs  resolver.rs  schema.rs  simple_value.rs  union.rs  variables.rs  with_lifetime.rs
tests/schemas/: custom_directive.graphql  custom_scalar.graphql  enum.graphql  github_query.graphql  input_object.graphql  interface.graphql  multiple_operation.graphql  pet_schema.graphql  simple_dummy.graphql  starwars.graphql  test_schema.graphql  union.graphql  validation_test.graphql
types/: directive.html  enum.html  index.html  input_object.html  interface.html  object.html  scalar.html  union.html
