[package]
name = "rusty-gql"
edition = "2021"
version = "0.1.0"
authors = ["Tak-Iwamoto"]
description = "Schema first GraphQL Library for Rust"
license = "MIT"
documentation = "https://github.com/Tak-Iwamoto/rusty-gql"
homepage = "https://github.com/Tak-Iwamoto/rusty-gql"
repository = "https://github.com/Tak-Iwamoto/rusty-gql"
keywords = ["graphql", "async", "web"]
categories = ["asynchronous", "web-programming"]
readme = "README.md"

[workspace]
members = ["examples/*", "macro", "cli", "frameworks/axum"]

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
futures-util = {version = "0.3.18", default-features = false, features = ["io", "sink"]}
graphql-parser = "0.3.0"
http = "0.2.5"
rusty-gql-macro = {path = "macro"}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tokio = {version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]}
