[package]
edition = "2021"
name = "rusty-gql-cli"
version = "0.1.0"

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.51"
axum = "0.4.2"
clap = "3.0.0-beta.5"
codegen = "0.1.3"
futures-util = "0.3.18"
graphql-parser = "0.3.0"
rusty-gql = { path = "../", version = "0.1.0" }
serde_json = "1.0.72"
tokio = "1.13.0"
