[package]
name = "rusty-gql-cli"
edition = "2021"
version = "0.0.6"
authors = ["Tak-Iwamoto"]
description = "A Command line tool for rusty-gql"
license = "MIT"
documentation = "https://github.com/Tak-Iwamoto/rusty-gql"
homepage = "https://github.com/Tak-Iwamoto/rusty-gql"
repository = "https://github.com/Tak-Iwamoto/rusty-gql"
keywords = ["graphql", "async", "web", "cli"]
categories = ["asynchronous", "web-programming"]

[[bin]]
name = "rusty-gql"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.51"
async-recursion = "0.3.2"
clap = { version = "3.0.5", features = ["cargo"] }
codegen = "0.1.3"
futures-util = "0.3.18"
graphql-parser = "0.3.0"
heck = "0.4.0"
# rusty-gql = {registry = "ktra", version = "0.0.3"}
rusty-gql = { path = "../", version = "0.0.3" }
serde_json = "1.0.72"
tokio = "1.13.0"
