[package]
name = "rusty-gql-cli"
edition = "2021"
version = "0.1.1"
authors = ["Tak-Iwamoto"]
description = "A Command line tool for rusty-gql"
license = "MIT"
documentation = "https://github.com/Tak-Iwamoto/rusty-gql"
homepage = "https://github.com/Tak-Iwamoto/rusty-gql"
repository = "https://github.com/Tak-Iwamoto/rusty-gql"
keywords = ["graphql", "async", "web", "cli"]
categories = ["asynchronous", "web-programming"]

[[bin]]
name = "rusty-gql"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.51"
async-recursion = "0.3.2"
async-trait = "0.1.52"
clap = {version = "3.0.5", features = ["cargo"]}
codegen = "0.1.3"
futures-util = "0.3.18"
graphql-parser = "0.3.0"
heck = "0.4.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
rusty-gql = {path = "../", version = "0.1.1"}
serde_json = "1.0.72"
syn = {version = "1.0.86", features = ["full", "extra-traits", "visit-mut", "visit"]}
tokio = "1.13.0"
