[package]
edition = "2018"
name = "rusty-gql-codegen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["full", "extra-traits", "visit-mut", "visit"] }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"] }
