[package]
edition = "2021"
name = "rusty-gql-codegen"
version = "0.1.0"
authors = ["Tak-Iwamoto"]
description = "Macro for rusty-gql"
license = "MIT"
documentation = "https://github.com/Tak-Iwamoto/rusty-gql"
homepage = "https://github.com/Tak-Iwamoto/rusty-gql"
repository = "https://github.com/Tak-Iwamoto/rusty-gql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = {version = "1.0.80", features = ["full", "extra-traits", "visit-mut", "visit"]}

[dev-dependencies]
tokio = {version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]}
