[package]
name = "rusty-gql-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.14", default-features = false }
futures-util = "0.3.18"
rusty-gql = { path = "../.." }
serde_json = "1.0.72"
serde_urlencoded = "0.7.0"
