[package]
name = "rusty-gql-axum"
version = "0.1.0"
description = "axum integration for rusty-gql"
documentation = "https://github.com/Tak-Iwamoto/rusty-gql"
edition = "2021"
repository = "https://github.com/Tak-Iwamoto/rusty-gql"
authors = ["Tak-Iwamoto"]
homepage = "https://github.com/Tak-Iwamoto/rusty-gql"
license = "MIT"
keywords = ["graphql", "async", "web"]
categories = ["asynchronous", "web-programming"]

[dependencies]
async-trait = "0.1.52"
axum = {version = "0.4.2", features = ["ws", "headers"]}
bytes = "1.1.0"
futures-util = {version = "0.3.18", default-features = false, features = ["io", "sink"]}
http-body = "0.4.4"
rusty-gql = {path = "../.."}
serde_urlencoded = "0.7.0"
tokio-util = {version = "0.6.9", default-features = false, features = ["io", "compat"]}
